Fixed the misplaced position of the .logo.img in the smaller width size and made it aligned perfectly and also fixed the overall spacing issue of the hero section which was just below the navbar

--- a/DayZen/css/header.css
+++ b/DayZen/css/header.css
@@ -34,11 +34,12 @@ nav.navbar {
     background-color: #1a2b3c; /* Darker blue navbar */
     padding: 15px 0;
     border-bottom: 2px solid #1e90ff;
+    border: 200px solid black;
    
 }
 
 .navbar-toggler-icon {
-    background-color: #fff;
+    background-color: red;
     border-radius: 7px;
 }
 
